--- a/ui/src/main/resources/application.css
+++ b/ui/src/main/resources/application.css
@@ -15,6 +15,10 @@
     -fx-font-size: 3em;
 }
 
+.cell-value-conflict {
+    -fx-text-fill: red;
+}
+
 .cell-possible-value {
     -fx-text-fill: grey;
     -fx-font-size: 1.5em;
