Fix exludedValue methods in Cell, display indirect hints.

--- a/ui/src/main/resources/application.css
+++ b/ui/src/main/resources/application.css
@@ -37,3 +37,8 @@
     -fx-background-radius: 15 15 15 15;
     -fx-background-color: lightgreen;
 }
+
+.cell-indirect-hint {
+    -fx-background-radius: 15 15 15 15;
+    -fx-background-color: lightcoral;
+}
